<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".presentation.loginactivity.ForgetPassword">


    <TextView
        android:id="@+id/textView_forgetPassword_resetPasswordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/orbitron"
        android:text="@string/resetMyPassword"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.11" />

    <EditText
        android:id="@+id/editText_forgetPassword_userName"
        android:layout_width="254dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="476dp"
        android:background="@android:drawable/editbox_background"
        android:backgroundTint="@color/colorPrimary"
        android:cursorVisible="true"
        android:ems="10"
        android:hint="@string/userName"
        android:inputType="text"
        android:textColor="@android:color/background_light"
        android:textColorHighlight="@color/colorAccent"
        android:textColorHint="@color/whiteBtn"
        android:textColorLink="@color/colorAccent"
        android:textCursorDrawable="@drawable/cursor_colour"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_forgetPassword_resetPasswordText"
        app:layout_constraintVertical_bias="0.74"
        tools:targetApi="o" />


    <EditText
        android:id="@+id/editText_forgetPassword_securityAnswer"
        android:layout_width="254dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@android:drawable/editbox_background"
        android:backgroundTint="@color/colorPrimary"
        android:cursorVisible="true"
        android:ems="10"
        android:hint="@string/securityAnswer"
        android:inputType="text"
        android:textColor="@android:color/background_light"
        android:textColorHighlight="@color/colorAccent"
        android:textColorHint="@color/whiteBtn"
        android:textColorLink="@color/colorAccent"
        android:textCursorDrawable="@drawable/cursor_colour"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_forgetPassword_securityQuestion"
        app:layout_constraintVertical_bias="0.057"
        tools:targetApi="o" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="408dp"
        android:background="@android:drawable/editbox_background"
        android:backgroundTint="@android:color/background_light"
        android:onClick="getSecurityQuestionBtnClick"
        android:text="@string/getSecurityQuestion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="156dp"
        android:background="@android:drawable/editbox_background"
        android:backgroundTint="@android:color/background_light"
        android:onClick="resetBtnClick"
        android:text="@string/resetPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_forgetPassword_securityAnswer"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView_forgetPassword_securityQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/securityQuestion"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_forgetPassword_userName"
        app:layout_constraintVertical_bias="0.302" />

</android.support.constraint.ConstraintLayout>