<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.LoginActivity.Login"
    android:background="@color/colorPrimary"
    >

    <TextView
        android:id="@+id/textView_login_loginText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/orbitron_medium"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="75sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.128" />

    <EditText
        android:id="@+id/editText_login_enterUserName"
        android:layout_width="254dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:background="@android:drawable/editbox_background"
        android:backgroundTint="@color/colorPrimaryDark"
        android:cursorVisible="true"
        android:ems="10"
        android:hint="@string/userName"
        android:inputType="textAutoCorrect|textAutoComplete|textEmailAddress"
        android:shadowColor="@color/black_overlay"
        android:textColor="@android:color/background_light"
        android:textColorHighlight="@color/black_overlay"
        android:textColorLink="@color/black_overlay"
        android:textCursorDrawable="@drawable/cursor_colour"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_login_loginText"
        app:layout_constraintVertical_bias="0.107"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/editText_login_enterPassword"
        android:layout_width="254dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="484dp"
        android:autofillHints=""
        android:background="@android:drawable/editbox_background_normal"
        android:backgroundTint="@color/colorPrimaryDark"
        android:cursorVisible="true"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:shadowColor="@color/colorAccent"
        android:textColor="@android:color/background_light"
        android:textColorHighlight="@color/colorAccent"
        android:textColorLink="@color/colorAccent"
        android:textCursorDrawable="@drawable/cursor_colour"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_login_enterUserName"
        app:layout_constraintVertical_bias="0.528"
        tools:targetApi="o" />

    <Button
        android:id="@+id/button_login_loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@android:drawable/editbox_background"
        android:backgroundTint="@android:color/background_light"
        android:onClick="loginBtnClick"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.665"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_login_enterPassword"
        app:layout_constraintVertical_bias="0.196" />

    <TextView
        android:id="@+id/textView_login_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/or"
        android:textColor="@android:color/background_light"
        android:textColorHighlight="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_login_enterPassword"
        app:layout_constraintVertical_bias="0.402" />

    <Button
        android:id="@+id/button_login_signupBtn"
        android:layout_width="254dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="signUpBtnClick"
        android:background="@android:drawable/editbox_background"
        android:backgroundTint="@android:color/background_light"
        android:text="@string/signupTwo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_login_or"
        app:layout_constraintVertical_bias="0.311" />

    <TextView
        android:id="@+id/textView_login_resetBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="forgetPasswordBtnClick"
        android:text="@string/forgetPassword"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button_login_loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.62"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_login_enterPassword"
        app:layout_constraintVertical_bias="0.576" />


</android.support.constraint.ConstraintLayout>